fix: adjust tableheader spacing

--- a/src/style/table.styl
+++ b/src/style/table.styl
@@ -5,7 +5,7 @@
   default-border()
   default-border-radius()
   + .{prefix}-pagination
-    margin-top:20px
+    margin-top 10px
   table
     border-collapse: collapse
   td,th
