--- a/src/style/tableheader.styl
+++ b/src/style/tableheader.styl
@@ -7,6 +7,8 @@
     flex: 1
     line-height: 40px
     user-select: none
+    [right]
+      float right
   .{prefix}-search-input
     width: 300px
     margin-right: 2px
@@ -14,7 +16,10 @@
       cursor: pointer
   + .{prefix}-table
   + .{prefix}-pagintable
-    margin-top: 20px
+    margin-top: 10px
     
-
-
+.{prefix}-table
+.{prefix}-table-header
+.{prefix}-form-area
+  + .{prefix}-table-header
+    padding-top 20px
